--- a/views/list.ejs
+++ b/views/list.ejs
@@ -31,8 +31,8 @@
 
     </nav>
 
-    <% if (lists.length > 0) { %>
-    <% lists.forEach(function(user){ %>
+    <% if (we.length > 0) { %>
+    <% we.forEach(function(user){ %>
     <div class="container">
         <h2></h2>
         <p>Image at the top (card-img-top):</p>
@@ -40,8 +40,9 @@
             <img class="card-img-top" src="img_avatar1.png" alt="Card image" style="width:100%">
             <div class="card-body">
                 <h4 class="card-title"><%=user.title%></h4>
-                <p class="card-text">Some example text some example text. John Doe is an architect and engineer</p>
+                <h4 class="card-title"><%=user.id%></h4>
                 <a href="#" class="btn btn-primary">See Profile</a>
+                <a href="/list/<%=user.id%>" class="btn btn-primary">more info</a>
             </div>
         </div>
         <br>
