--- a/views/oneprod.ejs
+++ b/views/oneprod.ejs
@@ -28,19 +28,28 @@
                 <a class="nav-link" href="list">list</a>
             </li>
         </ul>
-    </nav>
-    <!-- form -->
-    <div class="container">
-        <h2>Stacked form</h2>
 
-        <form action="/add-product" method="POST">
-            <div class="form-group">
-                <input type="text" class="form-control" id="email" name="product">
-                <input type="text" class="form-control" id="email" name="id">
+    </nav>
+
+
+
+    <div class="container">
+        <h2></h2>
+        <p>Image at the top (card-img-top):</p>
+        <div class="card" style="width:400px">
+            <img class="card-img-top" src="img_avatar1.png" alt="Card image" style="width:100%">
+            <div class="card-body">
+                <h4 class="card-title"><%=prod.title%></h4>
+                <h4 class="card-title"><%=prod.title%></h4>
+                <h4 class="card-title"><%=prod.id%></h4>
+
+                <a href="#" class="btn btn-primary">See Profile</a>
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
-        </form>
-    </div>
+        </div>
+
+
+
+
 
 </body>
 
